# Uni_Vision

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Makefile  PPT.MD  PRESENTATION_KNOWLEDGE_BASE.md  README.md  SYSTEM_WALKTHROUGH.md  TECHNICAL_DOCUMENTATION.md  alembic.ini  docker-compose.yml  literatureabstract.md  prd.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_perf_indexes.py  003_agent_knowledge.py  004_agent_audit.py
config/: cameras.yaml  cameras.yaml.example  default.yaml  models.yaml  models.yaml.example  prometheus.yml  prometheus_alerts.yml
config/grafana/dashboards/: uni-vision-pipeline.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/ollama/: Modelfile.adjudicator  Modelfile.navarasa  Modelfile.ocr
databricks_notebooks/: 00_setup.py  01_delta_lake_demo.py  02_mlflow_tracking_demo.py  03_spark_analytics_demo.py  04_vector_search_demo.py  05_full_pipeline_demo.py
scripts/: deploy_databricks.py  download_models.py  init-ollama.ps1  init-ollama.sh  smoke_test_agent.py  test_ws.py
src/uni_vision/: __init__.py
src/uni_vision/agent/: __init__.py  audit.py  control_tools.py  coordinator.py  graph_tools.py  intent.py  knowledge.py  knowledge_tools.py  llm_client.py  loop.py  memory.py  model_router.py  monitor.py  navarasa_client.py  pipeline_tools.py  prompts.py  sessions.py  sub_agents.py  tools.py  workflow_designer.py
src/uni_vision/api/: __init__.py  __main__.py
src/uni_vision/api/middleware/: __init__.py  auth.py  gen_key.py  rate_limit.py  security_headers.py
src/uni_vision/api/routes/: __init__.py  agent_chat.py  databricks_routes.py  detections.py  health.py  metrics.py  pipeline_graph.py  pipeline_process.py  risk_analysis.py  sources.py  stats.py  video_upload.py  ws_agent.py  ws_events.py  ws_pipeline.py
src/uni_vision/common/: config.py  exceptions.py  logging.py
src/uni_vision/components/: __init__.py  base.py  wrappers.py
src/uni_vision/contracts/: __init__.py  detector.py  dispatcher.py  dtos.py  frame_source.py  ocr_engine.py  post_processor.py  preprocessor.py
src/uni_vision/databricks/: __init__.py  delta_store.py  mlflow_tracker.py  spark_analytics.py  vector_search.py
src/uni_vision/detection/: __init__.py  engine.py  gpu_memory.py  plate_detector.py  vehicle_detector.py  vision_analyzer.py
src/uni_vision/ingestion/: __init__.py  phash.py  rtsp_source.py  sampler.py
src/uni_vision/manager/: __init__.py  adaptation_engine.py  agent.py  compatibility.py  component_registry.py  component_resolver.py  conflict_resolver.py  context_analyzer.py  dependency_resolver.py  fallback_chain.py  feedback_loop.py  gpu_profiler.py  hub_client.py  job_lifecycle.py  lifecycle.py  pipeline_composer.py  pipeline_validator.py  prompts.py  quality_scorer.py  scene_detector.py  schemas.py  temporal_tracker.py
src/uni_vision/monitoring/: __init__.py  health.py  metrics.py  profiler.py  vram_budget.py  vram_monitor.py
src/uni_vision/ocr/: __init__.py  fallback_ocr.py  llm_ocr.py  prompt_templates.py  response_parser.py  strategy.py
src/uni_vision/orchestrator/: block_registry.py  container.py  graph_engine.py  pipeline.py  pipeline_events.py
src/uni_vision/postprocessing/: __init__.py  adjudicator.py  deduplicator.py  dispatcher.py  flag_reasoning.py  impact_analysis.py  orchestrator.py  risk_analysis.py  validator.py
src/uni_vision/preprocessing/: __init__.py  chain.py  deskew.py  enhance.py  roi_extractor.py
src/uni_vision/storage/: __init__.py  models.py  object_store.py  postgres.py  retention.py
src/uni_vision/visualizer/: __init__.py  app.py  helpers.py  vis_crop_straighten.py  vis_enhancement.py  vis_frame_sampler.py  vis_ocr_output.py  vis_pipeline_stats.py  vis_plate_detection.py  vis_postprocess.py  vis_vehicle_detection.py
tests/: conftest.py
tests/integration/: test_api_lifecycle.py  test_config_loading.py  test_dispatcher_flow.py  test_pipeline_smoke.py  test_websocket_broadcast.py
tests/unit/: test_agent.py  test_api.py  test_config.py  test_container.py  test_databricks.py  test_deduplicator.py  test_dependency_resolver.py  test_dtos.py  test_exceptions.py  test_job_lifecycle.py  test_models.py  test_navarasa.py  test_phash.py  test_profiler.py  test_response_parser.py  test_security.py  test_validator.py  test_visualizer.py  test_vram_budget.py  test_websocket.py
univision/: README.md  abstract.md  improvedfrontend.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
univision/src/: main.tsx  styles.css
univision/src/app/: AppShell.tsx
univision/src/components/analytics/: AnalyticsDashboard.tsx  DatabricksInsights.tsx
univision/src/components/blocks/: BlockCategoryBar.tsx  BlockNode.tsx  BlockPort.tsx  BlockStatusBadge.tsx
univision/src/components/cameras/: CameraManager.tsx
univision/src/components/canvas/: CanvasStatsOverlay.tsx  CanvasToolbar.tsx  CanvasZoomControls.tsx  ExecutionDashboard.tsx  NodeContextMenu.tsx  QuickAddMenu.tsx  WorkbenchCanvas.tsx  WorkbenchMiniMap.tsx
univision/src/components/chat/: AgentStepsAccordion.tsx  AgenticOverlay.tsx  NavarasaChat.tsx
univision/src/components/code/: CodePanel.tsx  CodeToolbar.tsx  GenerateCodeButton.tsx
univision/src/constants/: categories.ts  keyboardShortcuts.ts  portTypes.ts  templates.ts
univision/src/hooks/: useKeyboardShortcuts.ts
univision/src/lib/: autoLayout.ts  blockRegistry.ts  blockRegistryDefaults.ts  cycleDetection.ts  graphSerializer.ts  graphValidator.ts  mockCodeGenerator.ts  pipelineIO.ts
univision/src/services/: api.ts  websocket.ts
univision/src/store/: agenticStore.ts  cameraStore.ts  chatStore.ts  codeStore.ts  detectionStore.ts  graphStore.ts  historyStore.ts  modelStore.ts  pipelineMonitorStore.ts  pipelineStore.ts  toastStore.ts  uiStore.ts
univision/src/types/: api.ts  block.ts  configSchema.ts  connection.ts  graph.ts  port.ts
(+26 files in other folders)
