[project]
name = "uni-vision"
version = "0.1.0"
description = "Real-time visual intelligence pipeline for multipurpose anomaly detection and scene analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Uni_Vision Team" }]

dependencies = [
    # --- Core async / web ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",

    # --- Computer vision ---
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0,<3.0",

    # --- Configuration ---
    "pyyaml>=6.0.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # --- Structured logging ---
    "structlog>=24.4.0",

    # --- Metrics / observability ---
    "prometheus-client>=0.21.0",

    # --- Database ---
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.0",  # required by alembic for migration engine

    # --- Object storage ---
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",

    # --- Task queue / pub-sub ---
    "redis>=5.2.0",

    # --- GPU monitoring (NVIDIA Management Library) ---
    "pynvml>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]
inference = [
    # Pinned separately — requires CUDA-specific wheels
    "torch>=2.5.0",
    "ultralytics>=8.3.0",
    "onnxruntime-gpu>=1.20.0",
    "easyocr>=1.7.0",
]
visualizer = [
    "streamlit>=1.41.0",
]
databricks = [
    "deltalake>=0.14.0",
    "pyarrow>=14.0.0",
    "mlflow>=2.10.0",
    "pyspark>=3.5.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
uni-vision = "uni_vision.orchestrator.pipeline:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uni_vision"]

# --- uv lockfile settings ---
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line-too-long — many long strings/URLs; enforced by formatter
    "E402",    # module-import-not-at-top — needed for conditional imports
    "N806",    # non-lowercase-variable-in-function — ML/math conventions (X, Y, etc.)
    "N812",    # lowercase-imported-as-non-lowercase
    "N815",    # mixed-case-variable-in-class-scope
    "N818",    # error-suffix-on-exception-name
    "B008",    # function-call-in-default-argument — FastAPI Depends() pattern
    "B027",    # empty-method-without-abstract-decorator
    "B904",    # raise-without-from-inside-except
    "RUF001",  # ambiguous-unicode-character-string — Hindi text is intentional
    "RUF002",  # ambiguous-unicode-character-docstring — Hindi text
    "RUF003",  # ambiguous-unicode-character-comment — Hindi text
    "RUF006",  # asyncio-dangling-task — fire-and-forget is intentional
    "RUF012",  # mutable-class-default — dataclass/pydantic patterns
    "RUF034",  # useless-if-else
    "SIM102",  # collapsible-if — readability preference
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["uni_vision"]

# --- Mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["cv2.*", "pynvml.*", "ultralytics.*", "onnxruntime.*"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: marks tests requiring a CUDA GPU",
    "integration: marks integration tests",
]
